<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bit.annanma1.musicschool.MusicSchoolMainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewWhichInstrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/enroll_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@android:color/background_dark"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/textViewChooseInstrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/choose_instrument" />

        <RadioGroup
            android:id="@+id/radioGroupInstruments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin" >

            <RadioButton
                android:id="@+id/radio_accordion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/accordion" />

            <RadioButton
                android:id="@+id/radio_bassoon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bassoon" />

            <RadioButton
                android:id="@+id/radio_cello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cello" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewStartMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/when_start" />

        <Spinner
            android:id="@+id/spinnerMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@android:color/background_dark"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/textViewEnrolled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin" />
    </LinearLayout>

</ScrollView>